# pyano

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md
platform_android/: settings.gradle.kts
platform_android/app/: build.gradle.kts
platform_android/app/src/main/: AndroidManifest.xml
platform_android/app/src/main/cpp/: CMakeLists.txt  audio-engine.cpp  native-lib.c  ring-buffer.h
platform_android/app/src/main/java/com/pyano/: MainActivity.kt  PyanoAudioService.kt  PyanoViewModel.kt
platform_android/app/src/main/java/com/pyano/audio/: AudioRecorder.kt  FluidSynthEngine.kt  LoopEngine.kt  MasteringEngine.kt  SF2MetadataReader.kt
platform_android/app/src/main/java/com/pyano/midi/: MidiDeviceManager.kt  MidiEventHandler.kt
platform_android/app/src/main/java/com/pyano/ui/: AdaptiveSelector.kt  BpmControl.kt  EffectsPanel.kt  LoopStationTab.kt  MasteringScreen.kt  MetronomeTab.kt  PyanoApp.kt  RecorderTab.kt  SoundFontBrowser.kt  SynthTab.kt
platform_android/app/src/main/java/com/pyano/ui/theme/: Theme.kt
platform_android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_pyano_logo.xml
platform_android/app/src/main/res/values/: themes.xml
platform_android/app/src/main/res/xml/: file_paths.xml
platform_android/app/src/test/java/com/pyano/: MasteringEngineTest.kt  MidiEventHandlerTest.kt
platform_android/app/src/test/native/: pyano-native-stub.c
platform_linux/: pyano.py  pyproject.toml  requirements.txt  run-tests.sh
platform_linux/tests/: conftest.py  test_pyano.py
