[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyano"
version = "1.0.0"
description = "Low-latency interactive MIDI-to-SoundFont piano synth for Linux."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ryan Cox" }]
keywords = ["midi", "soundfont", "fluidsynth", "synth", "piano"]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "pyfluidsynth>=1.3.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
]

[project.scripts]
pyano = "pyano:main"

[tool.setuptools]
py-modules = ["pyano"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["fluidsynth", "mido", "rtmidi"]
ignore_missing_imports = true
